--- a/04_Challenges/cv-styling-master/public/style1/index.html
+++ b/04_Challenges/cv-styling-master/public/style1/index.html
@@ -21,11 +21,11 @@
     <header>
       <div>
         <hgroup>
-          <h1>Student Name</h1>
-          <h2>Codes and Sleeps</h2>
+          <h1>Omar Khankan</h1>
+          <h2>Developer</h2>
         </hgroup>
         <figure>
-          <img src="../images/110x110.png" alt="Student Name">
+          <img src="../images/omar.jpeg" width="110" height="110" alt="Student Name">
         </figure>
       </div>
     </header>
@@ -33,7 +33,8 @@
       <section id="about">
         <h3>About</h3>
         <p>
-          Pellentesque nec nisi at sapien sagittis sagittis. Aliquam eu condimentum mauris. Proin accumsan enim at risus hendrerit lobortis. Nunc sollicitudin sodales lectus, et rhoncus mi molestie hendrerit. Vestibulum velit lorem, rhoncus a congue ultricies, faucibus facilisis risus. Mauris turpis ante, aliquet ac venenatis at, ornare ut velit. Duis ut erat neque, eget consectetur tellus. 
+          Hello! I am Omar Khankan, a programmer from Beirut, Lebanon. I have a wide range of abilities in development, design, and coding.
+          I also  provide top-notch website design services to assist businesses in transforming themselves into real-life brands.
         </p>
       </section>
       <section id="competencies">
@@ -65,44 +66,44 @@
         <h3>Experiences</h3>
         <div class="experience">
           <h4>
-            <span class="experience-type">Man2ouche Seller</span>
-            <span class="experience-institution">Snack Edouard</span>
+            <span class="experience-type">Wordpress Developer</span>
+            <span class="experience-institution">Freelance</span>
           </h4>
           <div class="experience-details">
 						<span class="experience-location">
-              Paris
+              Beirut
             </span>
 						<span class="experience-date">
               <span class="day">30</span>
               <span class="experience-date-separator">/</span>
-              <span class="month">12</span>
+              <span class="month">4</span>
               <span class="experience-date-separator">/</span>
-              <span class="year">1995</span>
+              <span class="year">2020</span>
             </span>
           </div>
 					<p class="experience-description">
-            Pellentesque nec nisi at sapien sagittis sagittis. Aliquam eu condimentum mauris. Proin accumsan enim at risus hendrerit lobortis. Nunc sollicitudin sodales lectus, et rhoncus mi molestie hendrerit. Vestibulum velit lorem, rhoncus a congue ultricies, faucibus facilisis risus. Mauris turpis ante, aliquet ac venenatis at, ornare ut velit. Duis ut erat neque, eget consectetur tellus. 
+            Pellentesque nec nisi at sapien sagittis sagittis. Aliquam eu condimentum mauris. Proin accumsan enim at risus hendrerit lobortis. Nunc sollicitudin sodales lectus, rhoncus mi molestie hendrerit. Vestibulum velit lorem, rhoncus a congue ultricies, faucibus facilisis risus. Mauris turpis ante, aliquet ac venenatis at, ornare ut velit. Duis ut erat neque, eget consectetur tellus. 
           </p>
         </div>
         <div class="experience">
           <h4>
-            <span class="experience-type">Man2ouche Seller</span>
-            <span class="experience-institution">Snack Edouard</span>
+            <span class="experience-type">Web Hosting Provider</span>
+            <span class="experience-institution">Freelance</span>
           </h4>
           <div class="experience-details">
 						<span class="experience-location">
-              Paris
+              Beirut
             </span>
 						<span class="experience-date">
               <span class="day">30</span>
               <span class="experience-date-separator">/</span>
-              <span class="month">12</span>
+              <span class="month">7</span>
               <span class="experience-date-separator">/</span>
-              <span class="year">1995</span>
+              <span class="year">2020</span>
             </span>
           </div>
 					<p class="experience-description">
-            Pellentesque nec nisi at sapien sagittis sagittis. Aliquam eu condimentum mauris. Proin accumsan enim at risus hendrerit lobortis. Nunc sollicitudin sodales lectus, et rhoncus mi molestie hendrerit. Vestibulum velit lorem, rhoncus a congue ultricies, faucibus facilisis risus. Mauris turpis ante, aliquet ac venenatis at, ornare ut velit. Duis ut erat neque, eget consectetur tellus. 
+            Pellentesque nec nisi at sapien sagittis sagittis. Aliquam eu condimentum mauris. Proin accumsan enim at risus hendrerit lobortis. Nunc sollicitudin sodales lectus, rhoncus mi molestie hendrerit. Vestibulum velit lorem, rhoncus a congue ultricies, faucibus facilisis risus. Mauris turpis ante, aliquet ac venenatis at, ornare ut velit. Duis ut erat neque, eget consectetur tellus. 
           </p>
         </div>
       </section>
@@ -118,11 +119,11 @@
               Beirut
             </span>
 						<span class="experience-date">
-              <span class="day">30</span>
+              <span class="day">20</span>
               <span class="experience-date-separator">/</span>
-              <span class="month">12</span>
+              <span class="month">11</span>
               <span class="experience-date-separator">/</span>
-              <span class="year">1995</span>
+              <span class="year">2022</span>
             </span>
           </div>
 					<p class="experience-description">
@@ -131,19 +132,19 @@
         </div>
         <div class="experience">
           <h4>
-            <span class="experience-type">Man2ouche Seller</span>
-            <span class="experience-institution">Snack Edouard</span>
+            <span class="experience-type">Bachelor in Computer Science</span>
+            <span class="experience-institution">LIU</span>
           </h4>
           <div class="experience-details">
 						<span class="experience-location">
-              Paris
+              Beirut
             </span>
 						<span class="experience-date">
               <span class="day">30</span>
               <span class="experience-date-separator">/</span>
-              <span class="month">12</span>
+              <span class="month">6</span>
               <span class="experience-date-separator">/</span>
-              <span class="year">1995</span>
+              <span class="year">2022</span>
             </span>
           </div>
 					<p class="experience-description">
@@ -165,29 +166,29 @@
           <dl class="contact contact-email">
             <dt class="contact-type">Email</dt>
             <dd class="contact-value">
-              <a href="mailto:student@codi.tech">student@codi.tech</a>
+              <a href="mailto:omarkhankan.1@gmail.com">omarkhankan.1@gmail.com</a>
             </dd>
           </dl>
           <dl class="contact contact-skype">
             <dt class="contact-type">Skype</dt>
-            <dd class="contact-value">first-last</dd>
+            <dd class="contact-value">omarkhankan</dd>
           </dl>
           <dl class="contact contact-phone">
             <dt class="contact-type">Phone/Whatsapp</dt>
             <dd class="contact-value">
-              <a href="tel:+96170261482">+9613123123</a>
+              <a href="tel:+96181733696">+96181733696</a>
             </dd>
           </dl>
           <dl class="contact contact-github">
             <dt class="contact-type">Github</dt>
             <dd class="contact-value">
-              <a href="https://github.com/User/" target="_blank">UserName</a>
+              <a href="https://github.com/omarkh7/" target="_blank">omarkh7</a>
             </dd>
           </dl>
           <dl class="contact contact-facebook">
             <dt class="contact-type">Facebook</dt>
             <dd class="contact-value">
-              <a href="//www.facebook.com/profileName" target="_blank">Profile Name</a>
+              <a href="https://www.facebook.com/omar.kh.07" target="_blank">omarkhankan</a>
             </dd>        
           </dl>
         </div>
