--- a/03_Exercises/03_JavaScript/javascript-basics-01/Step_2.html
+++ b/03_Exercises/03_JavaScript/javascript-basics-01/Step_2.html
@@ -3,7 +3,9 @@
     <head>
         <title>Step 2</title>
         <meta charset="UTF-8">
+        <script src="Step_2.js"></script>
     </head>
     <body>
+        
     </body>
 </html>
