--- a/03_Exercises/03_JavaScript/javascript-basics-01/Step_3.html
+++ b/03_Exercises/03_JavaScript/javascript-basics-01/Step_3.html
@@ -3,7 +3,9 @@
     <head>
         <title>Step 3</title>
         <meta charset="UTF-8">
+        <script src="Step_3.js"></script>
     </head>
     <body>
+       
     </body>
 </html>
