--- a/03_Exercises/03_JavaScript/javascript-basics-02/step 6/index.html
+++ b/03_Exercises/03_JavaScript/javascript-basics-02/step 6/index.html
@@ -4,11 +4,12 @@
     <meta charset="utf-8">
     <title>Step 6</title>
   </head>
-  <body>
-      <img src="images/image1.jpg" id="image1" />
+  <body onmouseout="mouseout()">
+      <img src="images/image1.jpg" id="image1"  />
       <img src="images/image2.jpg" id="image2" />
       <img src="images/image3.jpg" id="image3" />
       <img src="images/image4.jpg" id="image4" />
       <img src="images/image5.jpg" id="image5" />
+      <script src="step-6.js"></script>
   </body>
 </html>
